fix: Fixed composer script

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         }
     },
     "scripts": {
-        "test": "vendor\\bin\\phpunit tests",
-        "analyse": "vendor\\bin\\phpstan analyse -l 7 src tests"
+        "test": "phpunit tests",
+        "analyse": "phpstan analyse -l 7 src tests"
     }
 }
