--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,12 @@
     "description": "PHP class for durations",
     "type": "library",
     "require": {
-        "php": "^7.4.0"
+        "php": "^7.4|^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.2",
-        "phpstan/phpstan": "^0.12.33",
-        "vimeo/psalm": "^3.13"
+        "phpunit/phpunit": "^9.6",
+        "phpstan/phpstan": "^1.10",
+        "vimeo/psalm": "^5.9"
     },
     "license": "MIT",
     "authors": [
