--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,10 @@
     "description": "PHP class for durations",
     "type": "library",
     "require": {
-        "php": "^7.4|^8.0"
+        "php": "^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.6",
+        "phpunit/phpunit": "^10.1",
         "phpstan/phpstan": "^1.10",
         "vimeo/psalm": "^5.9"
     },
@@ -27,7 +27,7 @@
         }
     },
     "scripts": {
-        "test": "phpunit tests",
+        "test": "phpunit tests --colors",
         "analyse": [
             "phpstan analyse -l 7 src tests",
             "psalm --shepherd"
